# studyAgent

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile.dev  README.md  chat.txt  datainfluent.mermaid  docker-compose.yml  main.py  pyproject.toml
.chainlit/: config.toml
Learned/: 00_项目扫描结果.md  01_学习路线.md  02_阶段1.1-1.2_讲解与评价.md  03_阶段1.3_讲解与评价.md  QA.md  REVIEW_学习评分档案.md  ruler.md  top-知识扩展.md
app/: __init__.py  main.py
data/: knowledge_chunks.jsonl  personal_rag.jsonl  users.db
plan/: INIT_REPORT.md  P0-稳定性收口计划.md  RAG-图文统一检索实施方案.md  RAG实现现状详解.md  README.md  bluegraph.md  分析.md  工程化改进计划.md  架构修改建议.md  架构演进.md  用户功能使用说明.md  项目报告.md  项目报告2026-04-18.md  项目框架文档.md
problem/: Agent_report.md  Agent_solution.md  rag_report.md  rag_report_codex.md  rag_solution.md
public/: custom.js
reports/: rag_architect.md
slo/: aggregator.py  alert_evaluator.py  alert_rules.yaml  calibrate.py  checker.py  loader.py  regression_set.yaml  run_regression.py  thresholds.yaml
startup/: dev-start.sh  rag_modify_report.md  框架结构.md  精简版数据流图.md
tests/: conftest.py  test_agent_checkpointer.py  test_agent_conditional_edges.py  test_agent_graph_v2.py  test_agent_rag_reply_policy.py  test_agent_replan_branch.py  test_agent_service_progress_sink.py  test_answer_policy_node.py  test_answer_templates.py  test_append_trace.py  test_chat_api_rag_detail.py  test_chat_async_api.py  test_chat_flow.py  test_chat_phase1_api.py  test_chat_sync_fallback.py  test_config_async_settings.py  test_decision_orchestrator.py  test_error_classifier.py  test_evidence_gate_node.py  (+44 more)
(+163 files in other folders)
